@@ -582,275 +582,6 @@ name|protWords
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * @param in Token stream to be filtered.    * @param charTypeTable table containing character types    * @param generateWordParts If 1, causes parts of words to be generated: "PowerShot" => "Power" "Shot"    * @param generateNumberParts If 1, causes number subwords to be generated: "500-42" => "500" "42"    * @param catenateWords  1, causes maximum runs of word parts to be catenated: "wi-fi" => "wifi"    * @param catenateNumbers If 1, causes maximum runs of number parts to be catenated: "500-42" => "50042"    * @param catenateAll If 1, causes all subword parts to be catenated: "wi-fi-4000" => "wifi4000"    * @param splitOnCaseChange 1, causes "PowerShot" to be two tokens; ("Power-Shot" remains two parts regards)    * @param preserveOriginal If 1, includes original words in subwords: "500-42" => "500" "42" "500-42"    * @param splitOnNumerics 1, causes "j2se" to be three tokens; "j" "2" "se"    * @param stemEnglishPossessive If 1, causes trailing "'s" to be removed for each subword: "O'Neil's" => "O", "Neil"    * @param protWords If not null is the set of tokens to protect from being delimited    * @deprecated Use {@link #WordDelimiterFilter(TokenStream, byte[], int, CharArraySet)}    */
-annotation|@
-name|Deprecated
-DECL|method|WordDelimiterFilter
-specifier|public
-name|WordDelimiterFilter
-parameter_list|(
-name|TokenStream
-name|in
-parameter_list|,
-name|byte
-index|[]
-name|charTypeTable
-parameter_list|,
-name|int
-name|generateWordParts
-parameter_list|,
-name|int
-name|generateNumberParts
-parameter_list|,
-name|int
-name|catenateWords
-parameter_list|,
-name|int
-name|catenateNumbers
-parameter_list|,
-name|int
-name|catenateAll
-parameter_list|,
-name|int
-name|splitOnCaseChange
-parameter_list|,
-name|int
-name|preserveOriginal
-parameter_list|,
-name|int
-name|splitOnNumerics
-parameter_list|,
-name|int
-name|stemEnglishPossessive
-parameter_list|,
-name|CharArraySet
-name|protWords
-parameter_list|)
-block|{
-name|super
-argument_list|(
-name|in
-argument_list|)
-expr_stmt|;
-name|int
-name|flags
-init|=
-literal|0
-decl_stmt|;
-if|if
-condition|(
-name|generateWordParts
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|GENERATE_WORD_PARTS
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|generateNumberParts
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|GENERATE_NUMBER_PARTS
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|catenateWords
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|CATENATE_WORDS
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|catenateNumbers
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|CATENATE_NUMBERS
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|catenateAll
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|CATENATE_ALL
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|preserveOriginal
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|PRESERVE_ORIGINAL
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|splitOnCaseChange
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|SPLIT_ON_CASE_CHANGE
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|splitOnNumerics
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|SPLIT_ON_NUMERICS
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|stemEnglishPossessive
-operator|!=
-literal|0
-condition|)
-block|{
-name|flags
-operator||=
-name|STEM_ENGLISH_POSSESSIVE
-expr_stmt|;
-block|}
-name|this
-operator|.
-name|protWords
-operator|=
-name|protWords
-expr_stmt|;
-name|this
-operator|.
-name|iterator
-operator|=
-operator|new
-name|WordDelimiterIterator
-argument_list|(
-name|charTypeTable
-argument_list|,
-name|splitOnCaseChange
-operator|!=
-literal|0
-argument_list|,
-name|splitOnNumerics
-operator|!=
-literal|0
-argument_list|,
-name|stemEnglishPossessive
-operator|!=
-literal|0
-argument_list|)
-expr_stmt|;
-name|this
-operator|.
-name|flags
-operator|=
-name|flags
-expr_stmt|;
-block|}
-comment|/**    * @param in Token stream to be filtered.    * @param generateWordParts If 1, causes parts of words to be generated: "PowerShot", "Power-Shot" => "Power" "Shot"    * @param generateNumberParts If 1, causes number subwords to be generated: "500-42" => "500" "42"    * @param catenateWords  1, causes maximum runs of word parts to be catenated: "wi-fi" => "wifi"    * @param catenateNumbers If 1, causes maximum runs of number parts to be catenated: "500-42" => "50042"    * @param catenateAll If 1, causes all subword parts to be catenated: "wi-fi-4000" => "wifi4000"    * @param splitOnCaseChange 1, causes "PowerShot" to be two tokens; ("Power-Shot" remains two parts regards)    * @param preserveOriginal If 1, includes original words in subwords: "500-42" => "500" "42" "500-42"    * @param splitOnNumerics 1, causes "j2se" to be three tokens; "j" "2" "se"    * @param stemEnglishPossessive If 1, causes trailing "'s" to be removed for each subword: "O'Neil's" => "O", "Neil"    * @param protWords If not null is the set of tokens to protect from being delimited    * @deprecated Use {@link #WordDelimiterFilter(TokenStream, int, CharArraySet)}    */
-annotation|@
-name|Deprecated
-DECL|method|WordDelimiterFilter
-specifier|public
-name|WordDelimiterFilter
-parameter_list|(
-name|TokenStream
-name|in
-parameter_list|,
-name|int
-name|generateWordParts
-parameter_list|,
-name|int
-name|generateNumberParts
-parameter_list|,
-name|int
-name|catenateWords
-parameter_list|,
-name|int
-name|catenateNumbers
-parameter_list|,
-name|int
-name|catenateAll
-parameter_list|,
-name|int
-name|splitOnCaseChange
-parameter_list|,
-name|int
-name|preserveOriginal
-parameter_list|,
-name|int
-name|splitOnNumerics
-parameter_list|,
-name|int
-name|stemEnglishPossessive
-parameter_list|,
-name|CharArraySet
-name|protWords
-parameter_list|)
-block|{
-name|this
-argument_list|(
-name|in
-argument_list|,
-name|WordDelimiterIterator
-operator|.
-name|DEFAULT_WORD_DELIM_TABLE
-argument_list|,
-name|generateWordParts
-argument_list|,
-name|generateNumberParts
-argument_list|,
-name|catenateWords
-argument_list|,
-name|catenateNumbers
-argument_list|,
-name|catenateAll
-argument_list|,
-name|splitOnCaseChange
-argument_list|,
-name|preserveOriginal
-argument_list|,
-name|splitOnNumerics
-argument_list|,
-name|stemEnglishPossessive
-argument_list|,
-name|protWords
-argument_list|)
-expr_stmt|;
-block|}
 DECL|method|incrementToken
 specifier|public
 name|boolean
